package com.ecms.entity;

public enum StaffType {
    DOCTOR,
    NURSE,
    LAB_TECHNICIAN
}
